# FBiT-Staking-Mainnet

./: .gitignore  README.md
contracts/polygon/: .env.example  hardhat.config.js  package-lock.json  package.json
contracts/polygon/contracts/: FBiTStaking.sol
contracts/polygon/scripts/: cancel-and-deploy.js  deploy.js
contracts/solana/: Anchor.toml  package-lock.json  package.json  tsconfig.json
contracts/solana/programs/fbit-staking/: Cargo.toml
contracts/solana/programs/fbit-staking/src/: lib.rs
contracts/solana/scripts/: initialize.ts  update-team-tiers.ts
web/: .env.mainnet  .env.mainnet.example  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vercel.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: ExtensionErrorSuppressor.tsx
web/src/components/admin/: AdminPanel.tsx
web/src/components/history/: HistoryPanel.tsx
web/src/components/layout/: Header.tsx
web/src/components/market/: TokenPriceWidget.tsx
web/src/components/referral/: ReferralPanel.tsx
web/src/components/staking/: Dashboard.tsx  StakePanel.tsx
web/src/components/ui/: ContractSetupNotice.tsx  TokenLogo.tsx
web/src/context/: WalletContext.tsx
web/src/hooks/: useContract.ts  usePolygonStaking.ts  useSolanaStaking.ts  useTokenLogo.ts  useTokenPrice.ts
web/src/idl/: fbit_staking.ts
web/src/lib/: config.ts  reown.ts  security.ts  store.ts  utils.ts
web/src/lib/contracts/: abi.ts  idl.ts  polygon.ts  solana.ts
web/src/providers/: AppKitProvider.tsx
web/src/styles/: globals.css
web/src/types/: css.d.ts  index.ts
