[package]
name = "fbit-staking"
version = "0.1.0"
description = "FBiT Token Staking & Referral Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fbit_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
